bugfix: mobile guideline alignment

--- a/theme.css
+++ b/theme.css
@@ -410,10 +410,10 @@ body:not(.mod-macos).theme-dark {
 	--editor-list-ol-font-size: 17px;
 	--editor-list-ol-padding-right: 6px;
 	--editor-list-formatting-margin-right: -5px;
-	--editor-list-ol-margin-left: -7px;
+	--editor-list-ol-margin-left: -10.5px;
 	--editor-list-ul-width: 22px;
 	--editor-list-ul-font-size: 12px;
-	--editor-list-ul-margin-left: -7.5px;
+	--editor-list-ul-margin-left: -9.5px;
 	--editor-list-ul-margin-right: 6px;
 	--editor-list-ul-translate-y: -2px;
 	--editor-task-label-margin-left: -7px;
@@ -441,18 +441,20 @@ body:not(.mod-macos).theme-dark {
 	--editor-task-label-nested-margin-left: -10px;
 }
 
-.is-mobile.theme-light {
+body.is-mobile.theme-light {
 	--card-border-color: rgba(28, 28, 28, 0.05);
 	--editor-bg-color: rgb(250, 250, 250);
+	--indentation-guide-color: rgba(18, 18, 18, 0.2);
+
 }
 
-.is-mobile.theme-light .menu {
+body.is-mobile.theme-light .menu {
 	--interactive-normal: rgba(255, 255, 255, 0.5);
 }
 
-.is-mobile.theme-dark {
+body.is-mobile.theme-dark {
 	--interactive-normal: rgba(68, 68, 68, 0.6);
-	--indentation-guide-color: rgba(245, 245, 245, 0.1);
+	--indentation-guide-color: rgba(250, 250, 250, 0.25);
 	--card-border-color: rgba(80, 80, 80, 0.1);
 	--editor-bg-color: rgb(28, 28, 28);
 }
